# internal/transport/http/request/actor.go
@@ -11,15 +11,14 @@ type AddActor struct {
 	Films     []int     `json:"films,omitempty"example:"1,2"`
 }
 type UpdateActor struct {
-	Id        int       `json:"id"  validate:"required"`
-	Name      string    `json:"name,omitempty"`
-	Gender    string    `json:"gender,omitempty" `
-	BirthDate time.Time `json:"birth_date,omitempty"`
-	//Films     []models.Id `json:"films,omitempty""`
-	Films []int `json:"films,omitempty""`
+	Id        int       `json:"id"  example:"1"  validate:"required"`
+	Name      string    `json:"name" example:"ivan"`
+	Gender    string    `json:"gender" example:"female" validate:"oneof=male female"`
+	BirthDate time.Time `json:"birth_date" example:"2006-01-02T15:04:05Z" `
+	Films     []int     `json:"films,omitempty"example:"1,2"`
 }
 type DeleteActor struct {
-	Id int `json:"id" validate:"required"`
+	Id int `json:"id" example:"1" validate:"required"`
 }
 
 type GetActors struct {
